2009-11-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.81

	Workaround for a funny System UI window using DND type.

	* matchbox/core/mb-wm-atoms.c, matchbox/core/mb-wm-types.h: Add
	_NET_WM_WINDOW_TYPE_DND atom.
	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Consider
	_NET_WM_WINDOW_TYPE_DND clients as normal windows.

	Plug a memory leak when turning on compositor repeatedly.

	* matchbox/comp-mgr/mb-wm-comp-mgr.c (mb_wm_comp_mgr_turn_on): Do not
	install the damage event handler if it's already installed.

2009-11-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.80

2009-11-09  Gordon Williams <gordon.williams@collabora.co.uk>

	Regression fixes for NB#145154 - Fixing the odd warnings about X errors

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c: Don't report X errors
	  from XDamageDestroy, as we don't really care.
	* matchbox/core/mb-wm-client-base.c: Move position of traps so we
	  don't end up with 2 layers of trap when the decor is refreshed
	  (this gets rid of the g_critical).
	* matchbox/core/mb-wm-decor.c: Do an async trap around XGrabPointer,
	  as this can produce X errors.
	* matchbox/core/mb-wm-util.c: Make sure that in debug mode we don't
	  print (or even keep track of) X errors.

2009-11-09  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.79

2009-11-06  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes for my stupid compiler warnings:
	
	* matchbox/core/mb-wm-client-window.c 
	* matchbox/core/mb-wm-util.c
	* matchbox/core/mb-window-manager.c
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c

	Fixes: NB#145154 - Too many XSyncs in window manager causes slowdowns
	                   (Along with hildon-desktop changes)

	* matchbox/core/mb-wm-util.c
	* matchbox/core/mb-wm-util.h: Added mb_wm_util_async_[un]trap, which
	  will allow us to attribute X errors to specific pieces of code
	  without using XSync and XSetErrorHandler.