@@ -285,8 +285,15 @@ mb_wm_client_is_mapped (MBWindowManagerClient *client);
 Bool
 mb_wm_client_is_map_confirmed (MBWindowManagerClient *client);
 
+Bool
+mb_wm_client_is_unmap_confirmed (MBWindowManagerClient *client);
+
 void
 mb_wm_client_set_map_confirmed (MBWindowManagerClient *client,
+		Bool confirmed);
+
+void
+mb_wm_client_set_unmap_confirmed (MBWindowManagerClient *client,
 		Bool confirmed);
 
 void
