@@ -1,5 +1,11 @@
 2009-11-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
+	* matchbox/core/mb-wm-client.[ch] (mb_wm_client_is_unmap_confirmed,
+	mb_wm_client_set_unmap_confirmed): New API for detecting clients that
+	have received UnmapNotify but are still in the window stack.
+	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify): Call
+	mb_wm_client_set_unmap_confirmed here.
+
 	Release 0.2.81
 
 	Workaround for a funny System UI window using DND type.
